--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "start_url": "/",
   "icons": [
       {
-          "src": "/images/android-chrome-192x192.png",
+          "src": "/images/android-chrome-192x192.jpg",
           "sizes": "192x192",
           "type": "image/png"
       },
       {
-          "src": "/images/android-chrome-512x512.png",
+          "src": "/images/android-chrome-512x512.jpg",
           "sizes": "512x512",
           "type": "image/png"
       }
